<resources>
    <string name="app_name">Playlist Maker</string>


    <!-- текст вьюшек на главном активити -->
    <string name="playlist_maker">Playlist maker</string>
    <string name="TextSearchMainLayout">Поиск</string>
    <string name="TextMediaMainLayout">Медиа</string>


    <string name="TextSettingsMainLayout">Настройки</string>
    <string name="TextSettings">Настройки</string>
    <string name="blackThemeTextSettingActivity">Темная тема</string>
    <string name="ShareTextSettingActivity">Поделиться приложением</string>
    <string name="SupportTextSettingActivity">Написать в поддержку</string>
    <string name="UserAgreementTextSettingActivity">Пользовательское соглашение</string>
    <string name="nameSettingLayout">Настройки</string>
    <string name="nameTitleSearchLayout">Поиск</string>
    <string name="nameTitleMediaLayout">Медиатека</string>

    <string name="send_to">https://practicum.yandex.ru/</string>

    <string name="TEXT_EXTRA_SUBJEC">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>

    <string name="BODY_EXTRA_TEXT">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="adress">https://yandex.ru/legal/practicum_offer/</string>

    <string name="my_mail">al.gracheff2015@yandex.ru</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="bad_connection">Плохое соединение</string>
    <string name="textBadConnetion">Проблема со связью \n \n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="textUpdateButton">Обновить</string>
    <string name="textNitFound">Ничего не найдено</string>
    <string name="youSearch">Вы искали</string>
    <string name="messageIsEmptyListHistory">Здесь будет музыка, \n которую вы искали</string>
    <string name="textButtonClearHistoryList">Очистить историю</string>
    <string name="trackNameText">Yesterday (Remastered 2009)</string>
    <string name="artistNameText">The Beatles</string>
    <string name="durationTrackText">2:55</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NewPlayListText">Новый плейлист</string>
    <string name="playListNotFound">Вы не создали \n ни одного плейлиста</string>
    <string name="favorityTrackNotFound">Ваша медиатека пуста</string>
    <string name="noInternet">Отсутствует подключение к интернету</string>
    <string name="newPlayListToolBar">Новый плейлист</string>
    <string name="quitting_question">Завершить создание плейлиста?</string>
    <string name="quitting_question_edit">Завершить редактирование плейлиста?</string>
    <string name="unsaved_data_caution">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Создан %1$s</string>
    <string name="textNewPlaylist">Новый плейлист</string>
    <string name="textButtonNewPlaylist">Создать</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="quitting_question_playlist">Хотите удалить плейлист</string>
    <string name="there_is_nothing_to_share">В данном плейлисте нет треков</string>
    <string name="quitting_question_playlist2">Хотите удалить плейлист %1$s</string>
    <string name="text_edit_playlist">Редактировать</string>
    <string name="text_title_save_edit_playlist">Сохранить</string>
    <string name="question_delete_track">Хотите удалить трек?</string>
    <string name="text_share_bottom_menu">Поделиться</string>
    <string name="text_edit_bottom_menu">Редактировать информацию</string>
    <string name="text_delete_bottom_menu">Удалить плейлист</string>


    <plurals name="plural_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plural_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>


</resources>