<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ScreenBackgroundActivity"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imArtworkUrl100"
        android:layout_width="45dp"
        android:layout_height="45dp">

    </ImageView>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackName"
            style="@style/ItemTrackName"
            android:text="@string/trackNameText">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                style="@style/ItemArtistNAmeAndTime"
                android:text="@string/artistNameText"
                android:layout_weight="1">

            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_point">

            </ImageView>

            <TextView
                android:id="@+id/trackTime"
                style="@style/ItemArtistNAmeAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durationTrackText">

            </TextView>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTintButtonSetting"
        android:stateListAnimator="@null"
        android:clickable="false"
        app:icon="@drawable/ic_baseline_navigate_next"
        app:iconGravity="end"
        app:iconTint="@color/iconColorSettingLayout"
        tools:ignore="SpeakableTextPresentCheck" />


</LinearLayout>
