<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsActivity"
    android:background="@color/ScreenBackgroundActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/nameSettingLayout"
        app:titleTextColor="@color/TextColorToolBarScreen"
        android:backgroundTint="@color/BackgroundColorToolBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingHorizontal="@dimen/paddingHorizontalSettingLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomSwitch"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_settings_dark_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fontFamily="@font/ys_text_medium_regular"
                android:text="@string/blackThemeTextSettingActivity"
                android:textSize="@dimen/textSizeSwitchCompat"
                android:textStyle="normal"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:checked="true"
                android:theme="@style/SCBSwitch"
                android:textColor="@color/textColorSwitch">

            </androidx.appcompat.widget.SwitchCompat>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginButtonSettingsLayout"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyleSettings"
                android:text="@string/ShareTextSettingActivity">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_im_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundTintButtonSetting"
                android:stateListAnimator="@null"
                app:icon="@drawable/ic_baseline_share"
                app:iconGravity="end"
                app:iconTint="@color/iconColorSettingLayout"
                tools:ignore="SpeakableTextPresentCheck"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginButtonSettingsLayout"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyleSettings"
                android:text="@string/SupportTextSettingActivity">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_im_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundTintButtonSetting"
                android:stateListAnimator="@null"
                app:icon="@drawable/ic_baseline_support"
                app:iconGravity="end"
                app:iconTint="@color/iconColorSettingLayout"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginButtonSettingsLayout"
            android:orientation="horizontal">

            <TextView

                style="@style/TextStyleSettings"
                android:text="@string/UserAgreementTextSettingActivity">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_im_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundTintButtonSetting"
                android:stateListAnimator="@null"
                app:icon="@drawable/ic_baseline_navigate_next"
                app:iconGravity="end"
                app:iconTint="@color/iconColorSettingLayout"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>